# demarc

./: .gitignore  Cargo.toml  Justfile  README.md  demarc.md  makedemo.py  organize_adf.py
demos/nexus7/: Nexus7  Nexus7AGA.Slave  Nexus7AGA.info  ReadMe  ReadMe.info  demo.m3u
libretro/: cap32_libretro.dylib  hatari_libretro.dylib
src/: audio.rs  commands.rs  emulator.rs  hud.rs  main.rs  media_keys.rs  post_process.rs  retro.rs  retro_emu.rs  utils.rs
system/shaders/: lottes.wgsl
system/vice/: vicerc-dump-C64SC
system/vice/C64/: rr38ppal.crt
